ftpreview/dlli.h

typedef void *DWYCO_LIST;
typedef DWYCO_LIST DWYCO_SERVER_LIST;
// WARNING: for "connect_all" processing, channel_destroy and call_established
// callbacks may act funny starting ca 4/2006 (ie, the id's may not match up
// between status callbacks and other callbacks. this is due to the new server
// assisted calling. use "connect_all2" interface instead.
// destroy callbacks still work as usual for other parts of the interface.
typedef void (DWYCOCALLCONV *DwycoChannelDestroyCallback)(int id, void *user_arg);
// see below for DWYCO_CALLDISP_* constants for the "what" parameter in this callback
typedef  void (DWYCOCALLCONV *DwycoCallDispositionCallback)(int call_id, int chan_id, int what, void *user_arg, const char *uid, int len_uid, const char *call_type, int len_call_type);
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceCallback)(int chan_id, const char *name, const char *location, const char *uid, int len_uid, const char *call_type, int len_call_type);
typedef  void (DWYCOCALLCONV *DwycoZapAppearanceCallback)(int chan_id, const char *name, int size, const char *uid, int len_uid);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceDeathCallback)(int chan_id);
typedef  void (DWYCOCALLCONV *DwycoCommandCallback)(const char *cmd, void *user_arg, int succ, const char *failed_reason);
typedef  void (DWYCOCALLCONV *DwycoServerLoginCallback)(const char *str, int what);
void DWYCOEXPORT dwyco_set_debug_message_callback(DwycoStatusCallback cb);
void DWYCOEXPORT dwyco_debug_dump();
// Message summary records
// 0: who from
// 1: len
// 2: id on server
// 3: date vector
#define DWYCO_QMS_FROM "000"
#define DWYCO_QMS_LEN "001"
#define DWYCO_QMS_ID "002"
#define DWYCO_QMS_DATE_SENT "003"
#define DWYCO_QMS_DS_YEAR "003000"
#define DWYCO_QMS_DS_JDAY "003001"
// this is the local time, for display mostly since
// remote clients would have a hard time calculating this
#define DWYCO_QMS_DS_HOUR "003002"
#define DWYCO_QMS_DS_MINUTE "003003"
#define DWYCO_QMS_DS_SECOND "003004"
// added locally:
//#define DWYCO_QMS_PENDING_DEL "004"
#define DWYCO_QMS_IS_DIRECT "005"
// Message bodies after they are saved locally
#define DWYCO_QM_BODY_ID "000"
#define DWYCO_QM_BODY_FROM "001"
//#define DWYCO_QM_BODY_TEXT_do_not_use_use_get_msg_array_instead "002"
//#define DWYCO_QM_BODY_TEXT2_obsolete "002"
#define DWYCO_QM_BODY_ATTACHMENT "003"
#define DWYCO_QM_BODY_DATE "004"
#define DWYCO_QM_BODY_DATE_YEAR "004000"
#define DWYCO_QM_BODY_DATE_JDAY "004001"
// local time sent
#define DWYCO_QM_BODY_DATE_HOUR "004002"
#define DWYCO_QM_BODY_DATE_MINUTE "004003"
#define DWYCO_QM_BODY_DATE_SECOND "004004"
// locally set
#define DWYCO_QM_BODY_SENT "005"
// from server
//#define DWYCO_QM_BODY_RATING "006"
//#define DWYCO_QM_BODY_TIME_RECV "007" (defunct)
//#define DWYCO_QM_BODY_AUTOPLAY "008"  (defunct, never used)

// there are some subelements in here, but they aren't needed by client
#define DWYCO_QM_BODY_AUTH_VEC "007"
#define DWYCO_QM_BODY_FORWARDED_BODY "008"
//#define DWYCO_QM_BODY_NEW_TEXT_do_not_use_directly_use_get_msg_array "009"
#define DWYCO_QM_BODY_NEW_TEXT2 "009"
#define DWYCO_QM_BODY_FILE_ATTACHMENT "012"
int DWYCOEXPORT dwyco_init();
int DWYCOEXPORT dwyco_exit();
int DWYCOEXPORT dwyco_service_channels(int *spin);
void DWYCOEXPORT dwyco_set_client_version(const char *str, int len_str);
//void DWYCOEXPORT dwyco_set_login_password(const char *pw, int len_pw);
void DWYCOEXPORT dwyco_set_login_result_callback(DwycoServerLoginCallback cb);
void DWYCOEXPORT dwyco_database_login();
int DWYCOEXPORT dwyco_set_all_mute(int);
int DWYCOEXPORT dwyco_get_all_mute();
int DWYCOEXPORT dwyco_set_auto_squelch(int a);
int DWYCOEXPORT dwyco_get_auto_squelch();
void DWYCOEXPORT dwyco_set_full_duplex(int a);
int DWYCOEXPORT dwyco_get_full_duplex();
int DWYCOEXPORT dwyco_get_audio_output_in_progress();
int DWYCOEXPORT dwyco_get_squelched();
// This function only affects the limit used by the call-q when
// setting up multiple queued calls. If you don't call this, the default
// is 4. NOTE: this does NOT affect the number of calls you can queue up.
// This limits the number of concurrent calls that are streaming that
// have originated from the call queue.
// This function returns the previous value of the limit.

int DWYCOEXPORT dwyco_set_max_established_originated_calls(int n);
// these are the "what" parameter values for the call disposition callback
#define DWYCO_CALLDISP_ESTABLISHED 1	// call is connected and accepted, use "chan_id" to destroy call
#define DWYCO_CALLDISP_FAILED 2			// call setup failed, never was able to connect to callee, ignore "chan_id"
#define DWYCO_CALLDISP_TERMINATED 3		// call which was "established" is now ended (from either side.)
// NOTE: you get the more specific REJECT codes below when the
// the DLL can figure that out. there are lots of reasons a call may be
// rejected related to device errors and stuff.
#define DWYCO_CALLDISP_REJECTED 4		// call connected, but call screening rejected the call on the callee side
#define DWYCO_CALLDISP_REJECTED_PASSWORD_INCORRECT 5 // call screened by password checking
#define DWYCO_CALLDISP_REJECTED_BUSY 6 // call screened by resource limitation, or specific user action
#define DWYCO_CALLDISP_CANCELED 7		// call setup was canceled locally before connect succeeded
#define DWYCO_CALLDISP_STARTED 8		// call initiated
void DWYCOEXPORT dwyco_cancel_call(int call_id);
int DWYCOEXPORT dwyco_chan_to_call(int chan_id);
void DWYCOEXPORT dwyco_set_call_appearance_callback(DwycoCallAppearanceCallback cb);
void DWYCOEXPORT dwyco_set_zap_appearance_callback(DwycoZapAppearanceCallback cb);
void DWYCOEXPORT dwyco_set_call_appearance_death_callback(DwycoCallAppearanceDeathCallback cb);
int DWYCOEXPORT dwyco_call_accept(int id);
int DWYCOEXPORT dwyco_call_reject(int id, int session_ignore);
int DWYCOEXPORT dwyco_zap_accept(int id, int always_accept);
int DWYCOEXPORT dwyco_zap_reject(int id, int session_ignore);
int DWYCOEXPORT dwyco_get_server_list(DWYCO_SERVER_LIST *list_out, int *numlines);
//__declspec(dllexport) const char * DWYCOCALLCONV dwyco_get_lobby_name_by_id(const char *id);
int DWYCOEXPORT dwyco_switch_to_chat_server(int i);
// this can be used to check a lobby password without
// affecting current connections. you *must* be connected to
// some lobby for this to work.
// Return values:
// 0 = cid is invalid, or some other error. note that if you are not
// connected to a lobby, this will always return 0.
// 1 = lobby doesn't require a password
// 2 = lobby requires a password and password is ok
// -1 = lobby requires a password but supplied password is incorrect.

int DWYCOEXPORT dwyco_check_chat_server_pw(const char *cid, const char *pw);
// returns:
// -1 : cid is invalid, or not connected to a server
// 0 : cid does not require a password
// 1 : cid has a password set
int DWYCOEXPORT dwyco_chat_server_has_pw(const char *cid);
// Return values:
// 0 = cid is invalid, or some immediate resource problem connecting to server.
// in both cases, the current lobby info is still valid.
// -1 = password incorrect. the current lobby info and connection is unaffected
// 1 = switch is in progress, all current lobby info is invalidated until
// the server switch is completed successfully.
// if the server switch fails, you will have to switch back to a system
// server using switch_to_chat_server in order to revalidate user lobby info.
int DWYCOEXPORT dwyco_switch_to_chat_server2(const char *cid, const char *pw);
int DWYCOEXPORT dwyco_disconnect_chat_server();
// must be called before dwyco_init
// this is used to set the cmd path that the windows dll can use
// if it needs to poke holes in the windows firewall. don't think it
// is used at this point.
int DWYCOEXPORT dwyco_set_cmd_path(const char *cmd, int len);