bld/cdc32/old/cdcdll.pas


{/// Directory records }
{/// v[0] is ip with port address }
{/// v[1] is vector of info }
{/// v[2] is inhibit flag }
{/// v[3] is extra info, if non-nil }
const DWYCO_DIR_IP = '000';
const DWYCO_DIR_INFO_HOSTNAME = '001000';
const DWYCO_DIR_INFO_USERNAME = '001001';
const DWYCO_DIR_INFO_DESC = '001002';
const DWYCO_DIR_INFO_CALLACCEPT = '001003';
const DWYCO_DIR_INFO_CA_MAX_AUDIO = '001003000';
const DWYCO_DIR_INFO_CA_MAX_VIDEO = '001003001';
const DWYCO_DIR_INFO_CA_CHAT = '001003002';
const DWYCO_DIR_INFO_CA_MAX_AUDIO_RECV = '001003003';
const DWYCO_DIR_INFO_CA_MAX_VIDEO_RECV = '001003004';
const DWYCO_DIR_INFO_UID = '001004';
const DWYCO_DIR_INFO_REG = '001005';
const DWYCO_DIR_INFO_ONLINE = '001006';
const DWYCO_DIR_INFO_SHITLISTED = '001007';
const DWYCO_DIR_INFO_RATING = '001008';
const DWYCO_DIR_INFO_DIRECT = '001009';
const DWYCO_DIR_INFO_LOCATION = '001010';
const DWYCO_DIR_INFO_CLIENT_TYPE = '001011';
const DWYCO_DIR_INFO_PROFILE = '001012';
const DWYCO_DIR_INFO_IS_GOD = '001014';
const DWYCO_DIR_INHIBIT = '002';
const DWYCO_DIR_EXTRA = '003';

{/// Message summary records }
{/// 0: who from }
{/// 1: len }
{/// 2: id on server }
{/// 3: date vector }
const DWYCO_QMS_FROM = '000';
const DWYCO_QMS_LEN = '001';
const DWYCO_QMS_ID = '002';
const DWYCO_QMS_DATE_SENT = '003';
const DWYCO_QMS_DS_YEAR = '003000';
const DWYCO_QMS_DS_JDAY = '003001';
const DWYCO_QMS_DS_HOUR = '003002';
const DWYCO_QMS_DS_MINUTE = '003003';
const DWYCO_QMS_DS_SECOND = '003004';
{/// added locally: }
const DWYCO_QMS_PENDING_DEL = '004';
const DWYCO_QMS_IS_DIRECT = '005';
{/// oops, server has to put this way out here because }
{/// old software expects to see the above structure... }
{/// 6: rating of sender }
const DWYCO_QMS_SENDER_RATING = '006';
const DWYCO_QMS_ONLINE = '007';

{/// Message bodies after they are saved locally }
const DWYCO_QM_BODY_ID = '000';
const DWYCO_QM_BODY_FROM = '001';
const DWYCO_QM_BODY_TEXT_dont_use_directly = '002';
const DWYCO_QM_BODY_TEXT2 = '002';
const DWYCO_QM_BODY_ATTACHMENT = '003';
const DWYCO_QM_BODY_DATE = '004';
const DWYCO_QM_BODY_DATE_YEAR = '004000';
const DWYCO_QM_BODY_DATE_JDAY = '004001';
const DWYCO_QM_BODY_DATE_HOUR = '004002';
const DWYCO_QM_BODY_DATE_MINUTE = '004003';
const DWYCO_QM_BODY_DATE_SECOND = '004004';
{/// locally set }
const DWYCO_QM_BODY_SENT = '005';
{/// from server }
const DWYCO_QM_BODY_RATING = '006';
const DWYCO_QM_BODY_TIME_RECV = '007';
const DWYCO_QM_BODY_AUTOPLAY = '008';
const DWYCO_QM_BODY_AUTH_VEC = '007';
const DWYCO_QM_BODY_FORWARDED_BODY = '008';
const DWYCO_QM_BODY_NEW_TEXT_dont_use_directly = '009';
const DWYCO_QM_BODY_NEW_TEXT2 = '009';
const DWYCO_QM_BODY_FILE_ATTACHMENT = '012';

procedure dwyco_set_login_password(pw: PChar; len_pw: Integer); stdcall;
procedure dwyco_set_login_result_callback(cb: DwycoServerLoginCallback); stdcall;
procedure dwyco_database_login(); stdcall;
procedure dwyco_change_login_password(old_pw: PChar; len_opw: Integer; new_pw: PChar; len_npw: Integer; cb: DwycoCommandCallback);stdcall;
procedure dwyco_fetch_login_password(typed_pw: Integer; cb: DwycoCommandCallback);stdcall;

function dwyco_set_cmd_path(cmd: PChar; len: Integer): Integer; stdcall   ;
function dwyco_init: Integer ;stdcall   ;
function dwyco_exit: Integer ;stdcall   ; 

function dwyco_service_channels(var spin: Integer): Integer ;stdcall   ; 
procedure dwyco_set_client_version(str: PChar; len_str: Integer); stdcall;

function dwyco_set_all_mute(a: Integer) : Integer ;stdcall   ;
function dwyco_get_all_mute: Integer ;stdcall   ;
function dwyco_set_auto_squelch(a: Integer) : Integer ;stdcall   ;
function dwyco_get_auto_squelch: Integer ;stdcall   ;
procedure dwyco_set_full_duplex(a: Integer) ;stdcall   ;
function dwyco_get_full_duplex: Integer ;stdcall   ;
function dwyco_get_audio_output_in_progress(): Integer; stdcall   ;
function dwyco_get_squelched(): Integer; stdcall   ;
// This function only affects the limit used by the call-q when
// setting up multiple queued calls. If you don't call this, the default
// is 4. NOTE: this does NOT affect the number of calls you can queue up.
// This limits the number of concurrent calls that are streaming that
// have originated from the call queue.
// This function returns the previous value of the limit.
function dwyco_set_max_established_originated_calls(n: Integer): Integer; stdcall;


{
procedure dwyco_connect_all(var ip_list: DwycoArrayOfPointers;
                            var uid_list: DwycoArrayOfPointers;
                            num: Integer; 
                            dcb: DwycoChannelDestroyCallback; 
                            dcb_arg1: Pointer; 
                            ecb: DwycoCallEstablishedCallback; 
                            ecb_arg1: Pointer; 
                            scb: DwycoStatusCallback; 
                            scb1_arg1: Pointer; 
                            send_video: Integer; 
                            recv_video: Integer; 
                            send_audio: Integer; 
                            recv_audio: Integer; 
                            private_chat: Integer; 
                            public_chat: Integer; 
                            pw: PChar 
                            )
 ;stdcall   ; 
}

type
DwycoCallDispositionCallback = procedure(call_id: Integer;
                                         chan_id: Integer;
                                         what: Integer;
                                         user_arg: Pointer;
                                         uid: PChar; len_uid: integer); stdcall;

const DWYCO_CALLDISP_ESTABLISHED = 1;                 // call is connected and accepted, use "chan_id" to destroy call 
const DWYCO_CALLDISP_FAILED = 2;                      // call setup failed, never was able to connect to callee, ignore "chan_id" 
const DWYCO_CALLDISP_TERMINATED = 3;                  // call which was "established" is now ended (from either side.)
const DWYCO_CALLDISP_REJECTED = 4;                    // call connected, but call screening rejected the call on the callee side
const DWYCO_CALLDISP_REJECTED_PASSWORD_INCORRECT = 5; // call reject by password screening
const DWYCO_CALLDISP_REJECTED_BUSY = 6;               // call rejected by resource limit or user action
const DWYCO_CALLDISP_CANCELED = 7;                    // call setup was canceled locally before connect succeeded
const DWYCO_CALLDISP_STARTED = 8;                     // call initiated
// this interface is a little better than the old one
// in that you can specifically say if you want the
// call queued up (duplicates not allowed), or not (duplicates
// allowed, and the call is initiated immediately.)
// set q_calls = 1 if you want the calls q'd
procedure dwyco_connect_all3(var ip_list: DwycoArrayOfPointers;
                             var uid_list: DwycoArrayOfPointers;
                             num: Integer;
                             cdc: DwycoCallDispositionCallback;
                             cdc_arg1: Pointer;
                             scb: DwycoStatusCallback;
                             scb1_arg1: Pointer;
                             send_video: Integer;
                             recv_video: Integer;
                             send_audio: Integer;
                             recv_audio: Integer;
                             private_chat: Integer;
                             public_chat: Integer;
                             pw: PChar ;
                             call_type: PChar;
                             len_call_type: Integer;
                             q_calls: Integer) ;stdcall   ;

// old interface, do not use if you can avoid it.
// this one implicitly started calls immediately if you
// handed it a single callee, or queued it if more than
// one was specified, which is confusing
procedure dwyco_connect_all2(var ip_list: DwycoArrayOfPointers;
                             var uid_list: DwycoArrayOfPointers;
                             num: Integer;
                             cdc: DwycoCallDispositionCallback;
                             cdc_arg1: Pointer;
                             scb: DwycoStatusCallback;
                             scb1_arg1: Pointer;
                             send_video: Integer;
                             recv_video: Integer;
                             send_audio: Integer;
                             recv_audio: Integer;
                             private_chat: Integer;
                             public_chat: Integer;
                             pw: PChar ;
                             call_type: PChar;
                             len_call_type: Integer) ;stdcall   ;

procedure dwyco_cancel_call(call_id: Integer); stdcall;
{ chan to call returns -1 if the chan isn't associated with a call}
function dwyco_chan_to_call(chan_id: Integer): Integer; stdcall;

procedure dwyco_set_call_appearance_callback(cb: DwycoCallAppearanceCallback) ;stdcall   ; 

procedure dwyco_set_zap_appearance_callback(cb: DwycoZapAppearanceCallback) ;stdcall   ; 

procedure dwyco_set_call_appearance_death_callback(cb: DwycoCallAppearanceDeathCallback) ;stdcall   ; 

function dwyco_call_accept(id: Integer): Integer ;stdcall   ; 

function dwyco_call_reject(id: Integer; session_ignore: Integer): Integer ;stdcall   ;

function dwyco_zap_accept(id: Integer; always_accept: Integer): Integer ;stdcall   ;

function dwyco_zap_reject(id: Integer; session_ignore: Integer): Integer ;stdcall   ;


procedure dwyco_set_directory_downloaded_callback(cb: DwycoDirectoryDownloadedCallback) ;stdcall   ;
procedure dwyco_set_debug_message_callback(cb: DwycoStatusCallback);stdcall   ;
procedure dwyco_debug_dump();stdcall   ;

// 2010.1
//function dwyco_directory_starting: Integer ;stdcall   ;
//
//function dwyco_directory_online: Integer ;stdcall   ;
//
//function dwyco_directory_downloading: Integer ;stdcall   ;

procedure dwyco_set_directory_sort_column(col: integer);stdcall   ;

function dwyco_get_server_list(var list_out: DWYCO_SERVER_LIST;
                               var numlines: Integer): Integer ;stdcall   ;

// 2010.1
//function dwyco_switch_to_server(i: Integer): Integer ;stdcall   ;
//function dwyco_disconnect_server: Integer ;stdcall   ;

function dwyco_switch_to_chat_server(i: Integer): Integer ;stdcall   ;


// this can be used to check a lobby password without
// affecting current connections. you *must* be connected to
// some lobby for this to work.
// Return values:
// 0 = cid is invalid, or some other error. note that if you are not
// connected to a lobby, this will always return 0.
// 1 = lobby doesn't require a password
// 2 = lobby requires a password and the pw is ok
// -1 = lobby requires a password but supplied password is incorrect.

function dwyco_check_chat_server_pw(cid: PChar; pw: PChar): Integer; stdcall;

// returns:
// -1 : cid is invalid, or not connected to a server
// 0 : cid does not require a password
// 1 : cid has a password set
function dwyco_chat_server_has_pw(cid: PChar): Integer; stdcall;

// Return values:
// 0 = cid is invalid, or some immediate resource problem connecting to server.
// in both cases, the current lobby info is still valid.
// -1 = password incorrect. the current lobby info and connection is unaffected
// 1 = switch is in progress, all current lobby info is invalidated until
// the server switch is completed successfully.
// if the server switch fails, you will have to switch back to a system
// server using switch_to_chat_server in order to revalidate user lobby info.

function dwyco_switch_to_chat_server2(cid: PChar; pw: PChar): Integer ;stdcall;
function dwyco_disconnect_chat_server: Integer ;stdcall   ;
